# Cotiviti-Topic-3-POC

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  Makefile  PLAN.md  README.md  SPEC.md  env.example  pyproject.toml  setup-and-test.md
app/: main.py
fixtures/: sample_ptp.csv
policyforge/: __init__.py  engine.py  extraction.py  gate.py  ingestion.py  orchestration.py  retriever.py  schemas.py  store.py
policyforge/evaluation/: __init__.py  run_eval.py
tests/: test_engine.py  test_eval.py  test_extraction.py  test_gate.py  test_ingestion.py  test_orchestration.py  test_retriever.py  test_schemas.py
